[package]
name = "bevy-ncollide-collision-pipeline-demo"
version = "0.1.0"
authors = ["Noah Callaway <noah@apsis.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }

nalgebra = "0.20"
ncollide3d = "0.22"
alga = "0.9.3"